Fix use of Java16 API
MiSim still operates on Java 8

Co-authored-by: L. Wagner  <LitschiW@users.noreply.github.com>